--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Intro Header -->
+    <!-- Intro Header 
     <header class="intro">
         <div class="intro-body">
             <div class="container">
@@ -84,7 +84,7 @@
             </div>
         </div>
     </header>
-
+-->
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
@@ -99,12 +99,12 @@
 
     <!-- Download Section -->
     <section id="download" class="content-section text-center">
-        <div class="download-section">
+        <div class="download-section download-custom">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Download Grayscale</h2>
                     <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-download btn-lg">Visit Download Page</a>
                 </div>
             </div>
         </div>
