--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Rawan Alghofaili</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,122 +41,128 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
-                </a>
-            </div>
+                  <span class="light">Rawan</span> Alghofaili
+              </a>
+          </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#download">Download</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+            <ul class="nav navbar-nav">
+                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#about">About</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#cv">CV</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#contact">Contact</a>
+                </li>
+            </ul>
         </div>
-        <!-- /.container -->
-    </nav>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
 
-    <!-- Intro Header 
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
+<!-- About Section -->
+<section id="about" class="container content-about content-section text-center">
+    <div class="row">
+        <div class="col-sm-12 col-md-3 col-md-push-9 col-lg-3 col-lg-push-9  content-brief">
+            <ul class="list-brief"> 
+             <li><i class="fa fa-map-marker fa-fw"></i><b>Lab:</b> S-1-067,
+             Science Building 
+             University of Massachusetts Boston</li>
+             <li><i class="fa fa-graduation-cap fa-fw"></i> <a href="files/cv.pdf">CV(PDF)</a></li>
+             <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:rawan.alghofaili@umb.edu">rawan.alghofaili@umb.edu</a></li>
+         </ul>    
+     </div>
+     <div class="col-sm-12 col-md-8 col-md-pull-3 col-lg-8 col-lg-pull-3">
+        <h2>Rawan Alghofaili</h2>
+        <p>I'm PhD student in the Department of Computer Science at the <a href="https://www.cs.umb.edu/">University of Massachusetts Boston</a> working under the supervision of <a href="https://www.cs.umb.edu/~craigyu/index.html">Lap-Fai (Craig) Yu</a>. Prior to venturing into the world of PhD life, I received an MEng. degree in Computer Science from <a href="http://www.cs.cornell.edu/">Cornell University</a>.</p>
+        <p> I'm interested in using data as a mean to create Computer Graphics applications. This involves blending the wonderful worlds of Cognitive Science, HCI, VR, Vision and Fabrication to produce functional data driven designs. </p>
+        <p><b>Research interests:</b> Computational Design, Virtual Reality, Graphics, Vision, HCI and Cognitve Science.</p>
+        <p></p>
+    </div>
+
+
+</div>
+</section>
+
+<!-- Download Section -->
+<section id="cv" class="content-section text-center">
+    <div class="download-section download-custom">
+        <div class="container">
+            <div class="col-lg-8 col-lg-offset-2">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Grayscale</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
+                    <h2>CV</h2>
+                </div>
+                <div class="row">
+                    <p>You can download a PDF copy of my CV.</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 col-lg-offset-2">
+                        <a href="files/cv.pdf" class="btn btn-download btn-lg">CV( Long )</a>
+                    </div>
+                    <div class="col-lg-2 col-lg-offset-2">
+                        <a href="files/resume.pdf" class="btn btn-download btn-lg">Resume( Short )</a>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
--->
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
+    </div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="container content-section text-center">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+            <h2>Contact</h2>
+            <p>Feel free to email me at </p>
+            <p><a href="mailto:rawan.alghofaili@umb.edu">rawan.alghofaili@umb.edu</a>
+            </p>
+            <ul class="list-inline banner-social-buttons">
+                <li>
+                    <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                </li>
+                <li>
+                    <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                </li>
+                <li>
+                    <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-graduation-cap fa-fw"></i> <span class="network-name">Google Scholar</span></a>
+                </li>
+            </ul>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section download-custom">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-download btn-lg">Visit Download Page</a>
-                </div>
-            </div>
-        </div>
-    </section>
+<!-- Map Section -->
+<!-- <div id="map"></div>
+ -->
+<!-- Footer -->
+<footer>
+    <div class="container text-center">
+        <p>Copyright &copy; Rawan Alghofaili 2014-2017</p>
+    </div>
+</footer>
 
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
 
-    <!-- Map Section -->
-    <div id="map"></div>
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
-        </div>
-    </footer>
+<!-- Plugin JavaScript -->
+<script src="js/jquery.easing.min.js"></script>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+<!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/grayscale.js"></script>
+<!-- Custom Theme JavaScript -->
+<script src="js/grayscale.js"></script>
 
 </body>
 
