--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 <li>
                     <a class="page-scroll" href="#cv">CV</a>
                 </li>
+                <li> 
+                    <a href="projects.html">Projects</a>
+                </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
@@ -126,14 +129,17 @@
             </p>
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    <a href="https://twitter.com/RawanMG" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                 </li>
                 <li>
-                    <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    <a href="https://github.com/RawanMG" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                 </li>
                 <li>
+                    <a href="https://www.linkedin.com/in/rawanmg" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                </li>
+<!--                 <li>
                     <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-graduation-cap fa-fw"></i> <span class="network-name">Google Scholar</span></a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
@@ -159,7 +165,7 @@
 <script src="js/jquery.easing.min.js"></script>
 
 <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+<!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script> -->
 
 <!-- Custom Theme JavaScript -->
 <script src="js/grayscale.js"></script>
