--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Rawan Alghofaili</title>
+    <link rel="shortcut icon" href="img/umb.ico" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -71,6 +72,25 @@
     <!-- /.container -->
 </nav>
 
+<!-- Header -->
+<header class="intro">
+ <div class="container">
+   <div class="mx-auto text-center">
+     <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>    
+     <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>  
+<!--      <div class="col-sm-12 col-md-3 col-md-push-9 col-lg-3 col-lg-push-9 content-brief-head">
+            <ul class="list-brief"> 
+             <li><i class="fa fa-map-marker fa-fw"></i><b>Lab:</b> S-1-067,
+             Science Building 
+             University of Massachusetts Boston</li>
+             <li><i class="fa fa-graduation-cap fa-fw"></i> <a href="files/cv.pdf">CV(PDF)</a></li>
+             <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:rawan.alghofaili@umb.edu">rawan.alghofaili@umb.edu</a></li>
+         </ul>    
+     </div> -->
+   </div> 
+ </div>
+</header>
+
 <!-- About Section -->
 <section id="about" class="container content-about content-section text-center">
     <div class="row">
@@ -85,7 +105,7 @@
      </div>
      <div class="col-sm-12 col-md-8 col-md-pull-3 col-lg-8 col-lg-pull-3">
         <h2>Rawan Alghofaili</h2>
-        <p>I'm PhD student in the Department of Computer Science at the <a href="https://www.cs.umb.edu/">University of Massachusetts Boston</a> working under the supervision of <a href="https://www.cs.umb.edu/~craigyu/index.html">Lap-Fai (Craig) Yu</a>. Prior to venturing into the world of PhD life, I received an MEng. degree in Computer Science from <a href="http://www.cs.cornell.edu/">Cornell University</a>.</p>
+        <p>I'm PhD student in the Department of Computer Science at the <a href="https://www.cs.umb.edu/">University of Massachusetts Boston</a> working under the supervision of Professor <a href="https://www.cs.umb.edu/~craigyu/index.html">Lap-Fai (Craig) Yu</a>. Prior to venturing into the world of PhD life, I received an MEng. (Master's of Engineering) in Computer Science from <a href="http://www.cs.cornell.edu/">Cornell University</a>.</p>
         <p> I'm interested in using data as a mean to create Computer Graphics applications. This involves blending the wonderful worlds of Cognitive Science, HCI, VR, Vision and Fabrication to produce functional data driven designs. </p>
         <p><b>Research interests:</b> Computational Design, Virtual Reality, Graphics, Vision, HCI and Cognitve Science.</p>
         <p></p>
